# trident-Alpha-Zero-Entity-1

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  spec.md
.claude/audits/: 2026-02-16.md  summary.md
.claude/other/: compiler-quality.md  real-world-performance.md
.claude/plans/: 4d-verification-framework.md  512k-release.md  bright-moseying-island.md  gpu-neural-rewrite.md  repo-structure-redesign.md  self-hosted-lexer.md  self-hosted-parser.md  self-hosted-typecheck.md
.cortex/plans/: self-hosted-lexer.md  self-hosted-parser.md  self-hosted-typecheck.md  trinity-complete.md
benches/: README.md  field_arithmetic.baseline.tasm  hash_preimage.baseline.tasm  loop_sum.baseline.tasm  merkle_verify3.baseline.tasm
docs/: README.md  ROADMAP.md  TODO.md  analysis.md  content-addressed.md  errors.md  for-blockchain-devs.md  for-developers.md  formal-verification.md  gold-standard.md  ir.md  llm-reference.md  opportunities.md  optimization.md  programming-model.md  prooving-roadmap.md  reference.md  spec.md  stark-proofs.md  tutorial.md  universal-execution.md  vision.md  writing-a-program.md
docs/explanation/: README.md  ai.md  content-addressing.md  cyber-license.md  for-blockchain-devs.md  for-developers.md  for-offchain-devs.md  for-onchain-devs.md  formal-verification.md  gold-standard.md  multi-target.md  neural-tir-tasm-compiler-v2.md  os-abstraction.md  privacy.md  programming-model.md  provable-computing.md  quantum.md  skill-library.md  stark-proofs.md  trident-ai-zkml-deep-dive.md  trident-quantum-applications.md  trinity-bench.md  universal-design.md  universal-execution.md  vision.md
docs/guides/: README.md  compiling-a-program.md  deploying-a-program.md  generating-proofs.md  optimization.md  prompts.md  running-a-program.md  verifying-proofs.md  writing-a-program.md
docs/reference/: README.md  briefing.md  cli.md  errors.md  grammar.md  integration.md  ir.md  language.md  os.md  provable.md  reference.md  spec.md  stdlib.md  targets.md  vm.md
docs/tutorials/: README.md  build-a-coin.md  (+9 more)
examples/: sum.tri  sum_check.tri
os/: README.md  aleo.toml  android.toml  aptos.toml  arbitrum.toml  aztec.toml  boundless.toml  browser.toml  cosmwasm.toml  ethereum.toml  icp.toml  linux.toml  macos.toml  miden.toml  near.toml  neptune.toml  nervos.toml  nockchain.toml  openvm-network.toml  polkadot.toml  solana.toml  starknet.toml  succinct.toml  sui.toml  ton.toml  wasi.toml
reference/: atlas.md  briefing.md  cli.md  ir.md  language.md  neural-optimizer.md  neural.md  os.md  plumb.md  quality.md  roadmap.md  stdlib.md  targets.md  tsp1-coin.md  tsp2-card.md  vm.md
src/: README.md  ast.rs  cost.rs  diagnostic.rs  doc.rs  emit.rs  equiv.rs  format.rs  hash.rs  lexeme.rs  lexer.rs  lib.rs  linker.rs  lsp.rs  main.rs  package.rs  parser.rs  project.rs  registry.rs  report.rs  resolve.rs  scaffold.rs  smt.rs  solve.rs  span.rs  stack.rs  target.rs  typeck.rs  types.rs  ucm.rs
std/: auth.tri  kernel.tri  merkle.tri  target.tri  utxo.tri
targets/: cairo.toml  miden.toml  openvm.toml  sp1.toml  triton.toml
tests/: audit_stdlib.rs
tree-sitter/: grammar.js  package-lock.json  package.json  tree-sitter.json
vm/: README.md
(+512 files in other folders)
