[package]
name = "trident-lang"
version = "0.1.0"
edition = "2021"
description = "A minimal, security-first universal language for provable computation"
license-file = "LICENSE.md"
repository = "https://github.com/cyberia-to/trident"
homepage = "https://github.com/cyberia-to/trident"
readme = "README.md"
keywords = ["zk", "provable", "compiler", "blockchain", "zero-knowledge"]
categories = ["compilers", "cryptography"]
exclude = ["docs/", "examples/", "tests/snapshots/"]

[lib]
name = "trident"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
blake3 = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
burn = { version = "0.20", features = ["wgpu", "autodiff", "ndarray"] }
rayon = "1.10"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
statrs = "0.18"

[dev-dependencies]
insta = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "trident"
path = "src/main.rs"

[[bin]]
name = "trident-lsp"
path = "src/bin/trident-lsp.rs"

[[bench]]
name = "end_to_end"
harness = false

[[example]]
name = "ref_std_crypto_poseidon2"
path = "benches/references/std/crypto/poseidon2.rs"

[[example]]
name = "ref_std_crypto_poseidon"
path = "benches/references/std/crypto/poseidon.rs"

[[example]]
name = "ref_std_crypto_bigint"
path = "benches/references/std/crypto/bigint.rs"

[[example]]
name = "ref_std_crypto_merkle"
path = "benches/references/std/crypto/merkle.rs"

[[example]]
name = "ref_std_quantum_gates"
path = "benches/references/std/quantum/gates.rs"

[[example]]
name = "ref_std_nn_tensor"
path = "benches/references/std/nn/tensor.rs"

[[example]]
name = "ref_std_private_poly"
path = "benches/references/std/private/poly.rs"

[[example]]
name = "ref_std_trinity_inference"
path = "benches/references/std/trinity/inference.rs"

[[example]]
name = "ref_std_compiler_lexer"
path = "benches/references/std/compiler/lexer.rs"

[[example]]
name = "ref_std_compiler_parser"
path = "benches/references/std/compiler/parser.rs"

[[example]]
name = "ref_std_compiler_pipeline"
path = "benches/references/std/compiler/pipeline.rs"

[[example]]
name = "ref_std_compiler_typecheck"
path = "benches/references/std/compiler/typecheck.rs"

[[example]]
name = "ref_std_compiler_codegen"
path = "benches/references/std/compiler/codegen.rs"

[[example]]
name = "ref_std_compiler_optimize"
path = "benches/references/std/compiler/optimize.rs"
